Splitting JDBC and SQL modules.